--- a/soap.html
+++ b/soap.html
@@ -563,8 +563,8 @@
                     <!-- <div class="form-group">
                         <input class="form-control" type="email" placeholder="Email Address" required="">
                     </div> -->
-                    <button type="submit" class="th-btn style6">Shop Now on Amazon</button>
-                    <button type="submit" class="th-btn style6">Blogs</button>
+                    <button type="submit" class="th-btn style6">Shop Now on Amazon <i class="fa-brands fa-amazon"></i></button>
+                    <button type="submit" class="th-btn style6">Blogs <i class="fa-regular fa-message-pen"></i></button>
                 </form>
             </div>
         </div>
