--- a/kennal-wash.html
+++ b/kennal-wash.html
@@ -191,7 +191,7 @@
             <div class="th-mobile-menu">
                 <ul>
                     <li class="">
-                        <a href="/">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li><a href="about.html">About Us</a></li>
                     <li class="">
@@ -246,7 +246,7 @@
                                 <nav class="main-menu d-none d-lg-inline-block">
                                     <ul>
                                         <li class="">
-                                            <a href="/">Home</a>
+                                            <a href="index.html">Home</a>
                                         </li>
                                         <li><a href="about.html">About Us</a></li>
                                         <li class="">
@@ -289,7 +289,7 @@
     <!--==============================
     Product Area  
     ==============================-->
-    <section class="product-details space-extra-bottom">
+    <section class="product-details space-extra-bottom mt-5">
         <div class="container">
             <div class="row gx-60">
                 <div class="col-lg-6">
@@ -308,10 +308,10 @@
                         <h6>Key Features:</h6>
                         <ul>
                             <li>Multipurpose Concentrate: Suitable for cleaning kennels, floors, walls, crates, and other pet areas.</li>
-                            <li>Natural Nourishment: Infused with Aloe Vera to soothe irritated skin and Vitamin E to nourish and strengthen fur.</li>
-                            <li>Safe for All Breeds: Made with pet-safe, non-toxic ingredients—free from harsh chemicals, parabens, and artificial fragrances.</li>
-                            <li>Eco-Friendly Choice: Biodegradable and environmentally conscious, perfect for planet-loving pet parents.</li>
-                            <li>Multipurpose Use: Ideal for regular baths or quick spot cleaning—great for active pets and sensitive skin alike.</li>
+                            <li>Eco-Friendly & Biodegradable: Made with natural, plant-based ingredients, this cleaner is safe for your pets and the environment.</li>
+                            <li>Concentrated Formula: Economical to use, as it can be diluted with water for efficient cleaning, reducing waste and plastic usage.</li>
+                            <li>Effective & Safe: Removes dirt, grime, stains, and odours without harsh chemicals. Safe for use on various surfaces such as plastic, metal, and sealed wood.</li>
+                            <li>Refreshing Lavender Scent: Leaves your pet’s area smelling fresh and clean with a calming lavender fragrance. Versatile Application: Ideal for kennels, pet areas, crates, floors, and walls.</li>
                         </ul>
                         <div class="mt-2 link-inherit">
                             <p>
@@ -324,15 +324,16 @@
                         </div>
                         <div class="product_meta">
                             <span class="sku_wrapper">Brand: <span class="sku"> Eco Cleanser</span></span>
-                            <span class="sku_wrapper">Scent: <span class="sku">Aloe Vera</span></span>
-                            <span class="sku_wrapper">Recommended Use: <span class="sku">Hydrating, Nourishing</span></span>
+                            <span class="sku_wrapper">Scent Variants: <span class="sku">Lavender · Lemon Blossom · Neem · Rose Mist · Sandalwood</span></span>
+                            <span class="sku_wrapper">Net Quantity: <span class="sku">500ml</span></span>
                             <span class="sku_wrapper">Form: <span class="sku">Bar Soap</span></span>
-                            <span class="sku_wrapper">Weight: <span class="sku">75g</span></span>
-                            <span class="sku_wrapper">Item Dimensions: <span class="sku">10 x 7 x 3 cm</span></span>
-                            <span class="sku_wrapper">Target Species: <span class="sku">Dogs and Cats</span></span>
+                            <span class="sku_wrapper">Item Weight: <span class="sku">600g</span></span>
+                            <span class="sku_wrapper">Surface Recommendation: <span class="sku">Multi-surface</span></span>
+                            <span class="sku_wrapper">Item Dimensions: <span class="sku">10 x 5 x 10 cm</span></span>
+                            <span class="sku_wrapper">Special Feature: <span class="sku">Concentrated formula for versatile and efficient cleaning</span></span>
                             <span class="sku_wrapper">Manufacturer: <span class="sku">Green medi Biotech</span></span>
                             <span class="sku_wrapper">Made in: <span class="sku">India</span></span>
-                            <span class="sku_wrapper">Best Seller Rank: <span class="sku">#11 in Dog Shower & Bath Supplies (Amazon India)</span></span>
+                            <!-- <span class="sku_wrapper">Best Seller Rank: <span class="sku">#2,701 in Pet Supplies, #25 in Dog Deodorizers</span></span> -->
                         </div>
                     </div>
                 </div>
@@ -355,10 +356,10 @@
                                         <img src="assets/img/icon/pets.svg" alt="">
                                     </div>
                                     <div class="media-body">
-                                        <div class="box-title">What’s Inside?</div>
-                                        <p class="box-text">Aloe Vera – Naturally hydrates, soothes irritation, and supports healing.
-                                                            Vitamin E – Promotes skin regeneration and improves fur health.
-                                                            No Harsh Chemicals – Free from parabens, sulfates, and synthetic fragrances.
+                                        <div class="box-title">How to Use</div>
+                                        <p class="box-text">Dilute: Mix the concentrated solution with water according to the instructions on the packaging. Clean: Apply the diluted solution to the surface you wish to clean (such as the floor, walls, or crate). Wipe: Use a cloth or sponge to clean the surface, removing grime, stains, and odours. Rinse (if necessary): Wipe the surface with a clean, damp cloth for a final touch.
+
+
                                         </p>
                                     </div>
                                 </div>
@@ -367,11 +368,15 @@
                                         <img src="assets/img/icon/pets.svg" alt="">
                                     </div>
                                     <div class="media-body">
-                                        <div class="box-title">Why Choose Eco Cleanser Pet Soap?</div>
-                                        <p class="box-text">At Eco Cleanser, we believe pet grooming should be as natural and safe as your love for them. Our bar soap is a testament to clean ingredients, gentle care, and sustainable living. Handcrafted in India, it's a proud blend of herbal wisdom and science.</p>
+                                        <div class="box-title">Why Choose Eco Cleanser Kennel Hygiene Solution?</div>
+                                        <p class="box-text">Pet-Safe: Non-toxic and free from harsh chemicals, ensuring the safety of your furry friends. <br>
+                                        Cost-Effective: The concentrated formula reduces the need for frequent repurchasing, offering long-lasting value. <br>
+                                        Eco-Conscious Choice: By using biodegradable ingredients and a concentrated formula, you reduce plastic waste and support a greener environment. <br>
+                                        Fresh Lavender Fragrance: The gentle lavender scent creates a pleasant atmosphere for both pets and pet owners.
+                                        </p>
                                     </div>
                                 </div>
-                                <div class="why-feature-prod">
+                                <!-- <div class="why-feature-prod">
                                     <div class="box-icon">
                                         <img src="assets/img/icon/pets.svg" alt="">
                                     </div>
@@ -379,7 +384,7 @@
                                         <div class="box-title">Ideal For</div>
                                         <p class="box-text">Sensitive or dry skin - Regular grooming routines - Pet parents who value eco-conscious living</p>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                         <div class="col-lg-6 col-12 d-lg-block prd-img">
@@ -431,12 +436,12 @@
             </ul> -->
             <div class="mt-5" id="">
                 <div class="">
-                    <p>Prepare to embark on a sensory journey with the Bosco Apple, a fruit that transcends the ordinary and promises an unparalleled taste experience. These apples are nothing short of nature’s masterpiece, celebrated for their distinctive blend of flavors and their captivating visual allure. Bosco Apples are a revelation for your taste buds. Their impeccable balance of sweetness and tartness creates a complex, layered taste profile that keeps you coming back for more. Each bite is a symphony of sweet and tangy notes, making these apples a gastronomic delight whether enjoyed fresh or as a key ingredient in your favorite culinary creations.</p>
-                    <p>The Bosco Apple is not just a fruit; it’s a work of art. Its striking, deep red skin is adorned with intricate speckles, making it a showstopper in the world of fruit aesthetics. Display these apples with pride in your kitchen, and you’ll undoubtedly draw admiration from all who see them. We take our commitment to the environment seriously. Bosco Apples are cultivated on eco-friendly orchards that prioritize sustainable farming practices. You can savor these apples knowing they are grown with respect for the planet, aligning with your values of environmental responsibility. Whether you’re a culinary aficionado or a casual home chef, Bosco Apples offer limitless possibilities in the kitchen. Slice them into a vibrant salad, transform them into mouthwatering pies, or blend them into wholesome applesauce. The culinary canvas is yours to paint with these versatile apples.</p>
+                    <p>Keep your pet’s surroundings spotless and safe with Eco Cleanser Kennel Hygiene Multi-Surface Concentrate Solution—a powerful, eco-conscious cleaning solution designed to maintain hygiene in pet spaces without compromising on safety. This plant-based formula effectively removes dirt, grime, stains, and unpleasant odours from kennels, crates, floors, walls, and more. Infused with a calming lavender fragrance, it refreshes your pet’s living space while ensuring a non-toxic, pet-safe environment. Its gentle yet efficient action makes it perfect for everyday cleaning in homes, shelters, grooming centres, or veterinary clinics.</p>
+                    <p>Crafted with sustainability in mind, this biodegradable and eco-friendly cleaner comes in a concentrated form, allowing you to dilute it as needed for maximum efficiency and minimal waste. Compatible with a variety of surfaces including plastic, metal, and sealed wood, it’s a versatile hygiene essential for every pet parent. By choosing Eco Cleanser, you’re not only protecting your furry friends but also supporting a greener planet. With fragrance variants like Lavender, Lemon Blossom, Neem, Rose Mist, and Sandalwood, you can maintain a clean, fresh-smelling space that’s both inviting and naturally safe.</p>
                 </div>
                 <div class="mt-5" >
                     <div class="woocommerce-Reviews">
-                        <div class="th-comments-wrap ">
+                        <!-- <div class="th-comments-wrap ">
                             <ul class="comment-list">
                                 <li class="review th-comment-item">
                                     <div class="th-post-comment">
@@ -499,7 +504,8 @@
                                     </div>
                                 </li>
                             </ul>
-                        </div> <!-- Comment Form -->
+                        </div>  -->
+                        <!-- Comment Form -->
                         <!-- <div class="th-comment-form ">
                             <div class="form-title">
                                 <h3 class="blog-inner-title ">Add a review</h3>
@@ -559,8 +565,8 @@
                     <!-- <div class="form-group">
                         <input class="form-control" type="email" placeholder="Email Address" required="">
                     </div> -->
-                    <button type="submit" class="th-btn style6">Shop Now on Amazon <i class="fa-brands fa-amazon"></i></button>
-                    <button type="submit" class="th-btn style6">Blogs <i class="fa-regular fa-message-pen"></i></button>
+                    <a href="https://amzn.in/d/b2KF37F" class="th-btn style6">Shop Now on Amazon <i class="fa-brands fa-amazon"></i></a>
+                    <a href="blogs.html" class="th-btn style6">Blogs <i class="fa-regular fa-message-pen"></i></a>
                 </form>
             </div>
         </div>
@@ -591,7 +597,7 @@
                         <div class="widget footer-widget">
                             <div class="th-widget-about">
                                 <div class="about-logo">
-                                    <a href="home-organic-farm.html"><img src="assets/img/ec-logo2.png" alt="Eco-Cleanser"></a>
+                                    <a href="index.html"><img src="assets/img/ec-logo2.png" alt="Eco-Cleanser"></a>
                                 </div>
                                 <p class="about-text">Eco Cleanser is a pet wellness brand devoted to clean, green, and gentle care. We create eco-friendly grooming products that are safe for pets, kind to the planet, and made with love.</p>
                                 <div class="th-social">
@@ -608,9 +614,9 @@
                             <h3 class="widget_title"><img src="assets/img/icon/pets.svg" style="filter: invert(1);" alt="Icon">Products</h3>
                             <div class="menu-all-pages-container">
                                 <ul class="menu">
-                                    <li><a href="shop.html">Pet Shampo</a></li>
-                                    <li><a href="shop.html">Pet Soap</a></li>
-                                    <li><a href="shop.html">Kennal Wash</a></li>
+                                    <li><a href="shampo.html">Pet Shampo</a></li>
+                                    <li><a href="soap.html">Pet Soap</a></li>
+                                    <li><a href="kennal-wash.html">Kennal Wash</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -620,10 +626,10 @@
                             <h3 class="widget_title"><img src="assets/img/icon/pets.svg" style="filter: invert(1);" alt="Icon">Quick Links</h3>
                             <div class="menu-all-pages-container">
                                 <ul class="menu">
-                                    <li><a href="faq.html">Home</a></li>
+                                    <li><a href="index.html">Home</a></li>
                                     <li><a href="about.html">About Us</a></li>
-                                    <li><a href="project.html">Products</a></li>
-                                    <li><a href="blog.html">Blog</a></li>
+                                    <li><a href="products.html">Products</a></li>
+                                    <li><a href="blogs.html">Blog</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -667,7 +673,7 @@
                         <p class="copyright-text">Copyright <i class="fal fa-copyright"></i> 2025 <a href="">Eco-Cleanser</a>. All Rights Reserved.</p>
                     </div>
                     <div class="col-md-6 text-center text-md-end">
-                        <p class="copyright-text">Designed & Developed by <a href="www.brinit.in">Brini'T</a>.</p>
+                        <p class="copyright-text">Designed & Developed by <a href="www.brinit.in"><b><u>BrinI'T</u></b></a>.</p>
 
                     </div>
                 </div>
