--- a/shampo.html
+++ b/shampo.html
@@ -191,7 +191,7 @@
             <div class="th-mobile-menu">
                 <ul>
                     <li class="">
-                        <a href="/">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li><a href="about.html">About Us</a></li>
                     <li class="">
@@ -246,7 +246,7 @@
                                 <nav class="main-menu d-none d-lg-inline-block">
                                     <ul>
                                         <li class="">
-                                            <a href="/">Home</a>
+                                            <a href="index.html">Home</a>
                                         </li>
                                         <li><a href="about.html">About Us</a></li>
                                         <li class="">
@@ -435,7 +435,7 @@
                 </div>
                 <div class="mt-5" >
                     <div class="woocommerce-Reviews">
-                        <div class="th-comments-wrap ">
+                        <!-- <div class="th-comments-wrap ">
                             <ul class="comment-list">
                                 <li class="review th-comment-item">
                                     <div class="th-post-comment">
@@ -498,7 +498,8 @@
                                     </div>
                                 </li>
                             </ul>
-                        </div> <!-- Comment Form -->
+                        </div>  -->
+                        <!-- Comment Form -->
                         <!-- <div class="th-comment-form ">
                             <div class="form-title">
                                 <h3 class="blog-inner-title ">Add a review</h3>
@@ -558,8 +559,8 @@
                     <!-- <div class="form-group">
                         <input class="form-control" type="email" placeholder="Email Address" required="">
                     </div> -->
-                    <button type="submit" class="th-btn style6">Shop Now on Amazon <i class="fa-brands fa-amazon"></i></button>
-                    <button type="submit" class="th-btn style6">Blogs <i class="fa-regular fa-message-pen"></i></button>
+                    <a href="https://amzn.in/d/b2KF37F" class="th-btn style6">Shop Now on Amazon <i class="fa-brands fa-amazon"></i></a>
+                    <a href="blogs.html" class="th-btn style6">Blogs <i class="fa-regular fa-message-pen"></i></a>
                 </form>
             </div>
         </div>
@@ -590,7 +591,7 @@
                         <div class="widget footer-widget">
                             <div class="th-widget-about">
                                 <div class="about-logo">
-                                    <a href="home-organic-farm.html"><img src="assets/img/ec-logo2.png" alt="Eco-Cleanser"></a>
+                                    <a href="index.html"><img src="assets/img/ec-logo2.png" alt="Eco-Cleanser"></a>
                                 </div>
                                 <p class="about-text">Eco Cleanser is a pet wellness brand devoted to clean, green, and gentle care. We create eco-friendly grooming products that are safe for pets, kind to the planet, and made with love.</p>
                                 <div class="th-social">
@@ -607,9 +608,9 @@
                             <h3 class="widget_title"><img src="assets/img/icon/pets.svg" style="filter: invert(1);" alt="Icon">Products</h3>
                             <div class="menu-all-pages-container">
                                 <ul class="menu">
-                                    <li><a href="shop.html">Pet Shampo</a></li>
-                                    <li><a href="shop.html">Pet Soap</a></li>
-                                    <li><a href="shop.html">Kennal Wash</a></li>
+                                    <li><a href="shampo.html">Pet Shampo</a></li>
+                                    <li><a href="soap.html">Pet Soap</a></li>
+                                    <li><a href="kennal-wash.html">Kennal Wash</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -619,10 +620,10 @@
                             <h3 class="widget_title"><img src="assets/img/icon/pets.svg" style="filter: invert(1);" alt="Icon">Quick Links</h3>
                             <div class="menu-all-pages-container">
                                 <ul class="menu">
-                                    <li><a href="faq.html">Home</a></li>
+                                    <li><a href="index.html">Home</a></li>
                                     <li><a href="about.html">About Us</a></li>
-                                    <li><a href="project.html">Products</a></li>
-                                    <li><a href="blog.html">Blog</a></li>
+                                    <li><a href="products.html">Products</a></li>
+                                    <li><a href="blogs.html">Blog</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -666,7 +667,7 @@
                         <p class="copyright-text">Copyright <i class="fal fa-copyright"></i> 2025 <a href="">Eco-Cleanser</a>. All Rights Reserved.</p>
                     </div>
                     <div class="col-md-6 text-center text-md-end">
-                        <p class="copyright-text">Designed & Developed by <a href="www.brinit.in">Brini'T</a>.</p>
+                        <p class="copyright-text">Designed & Developed by <a href="www.brinit.in"><b><u>BrinI'T</u></b></a>.</p>
 
                     </div>
                 </div>
